# axe

./: .env.example  .gitignore  AXE_STATE.md  CLAUDE.md  Cargo.toml  LICENSE  LLM-GUIDE.md  Readme.md  abi-db.json  clippy.toml
.githooks/: pre-commit  pre-push
.github/actions/run-loadtest/: action.yml
.github/workflows/: build-axe.yml  ci.yml  cron-amplifier-mainnet.yml  cron-amplifier-testnet.yml  cron-mainnet.yml  cron-testnet.yml  loadtest-burst.yml  loadtest-single.yml  loadtest-sustained.yml  test-amplifier-routes.yml  test-express-execution.yml  test-routes.yml
artifacts/: SenderReceiver.paris.json
docs/: axelar-debugging.md  decode.md  deploying.md  governance.md  load-test-coverage.md  load-testing.md  monitoring.md  routes.md
scripts/: audit_its_trust.py  compare-load-test-baseline.sh  run-baseline-matrix.sh  test_amplifier_routes.sh  vote_devnet_proposal.sh  vote_testnet_proposal.sh
src/: cli.rs  config.rs  config_source.rs  cosmos.rs  error.rs  evm.rs  hyperliquid.rs  main.rs  preflight.rs  retry.rs  solana.rs  state.rs  stellar.rs  sui.rs  timing.rs  types.rs  ui.rs  utils.rs  xrpl.rs
src/commands/: check_balances.rs  decode.rs  decode_evm_activity.rs  decode_sol_activity.rs  decode_sol_state.rs  decode_sol_tx.rs  decode_tx.rs  deploy.rs  event_extractors.rs  info_block.rs  init.rs  its_ownership.rs  mod.rs  reset.rs  status.rs  test_gmp.rs  test_helpers.rs  test_its.rs  verifier_votes.rs  verifiers.rs
src/commands/decode_sol_tx/: events.rs  format.rs  instructions.rs  mod.rs  parsing.rs  registry.rs
src/commands/load_test/: evm_sender.rs  evm_to_sol.rs  gas_estimate.rs  gas_mode.rs  gmp.rs  helpers.rs  its_evm_source.rs  its_evm_to_evm.rs  its_evm_to_sol.rs  its_evm_to_sol_with_data.rs  its_evm_to_stellar.rs  its_evm_to_sui.rs  its_evm_to_xrpl.rs  its_sol_to_evm.rs  its_sol_to_sui.rs  its_stellar_to_evm.rs  its_stellar_to_sol.rs  its_stellar_to_sui.rs  its_sui_to_evm.rs  its_sui_to_sol.rs  its_xrpl_to_evm.rs  keypairs.rs  metrics.rs  mod.rs  resolve.rs  sol_sender.rs  sol_to_evm.rs  stellar_sender.rs  sustained.rs  verify.rs  xrpl_sender.rs
src/commands/load_test/verify/: its_deploy.rs  legacy.rs  mod.rs  pipeline.rs  report.rs  state.rs
src/commands/load_test/verify/checks/: evm.rs  mod.rs  solana.rs
src/commands/propose/: helpers.rs  mod.rs  relay.rs  types.rs
src/commands/test_express/: gmp_api.rs  mod.rs  types.rs
src/commands/test_gmp/: destination.rs  mod.rs  relay.rs  sender_receiver.rs  source.rs
src/commands/test_its/: cache.rs  encoding.rs  mod.rs  phase_a.rs  phase_b.rs  relay.rs  remediation.rs
src/cosmos/: events.rs  mod.rs  rpc.rs  signers.rs  tx.rs
src/gmp_api/: mod.rs  types.rs
src/solana/: balance.rs  encoding.rs  gateway.rs  its.rs  mod.rs  programs.rs  rpc.rs
src/stellar/: mod.rs  rpc.rs  scval.rs  tx.rs  wallet.rs
src/steps/: config_edit.rs  cosmos_poll.rs  cosmos_tx.rs  deploy_gateway.rs  deploy_its.rs  deploy_upgradable.rs  evm_compat.rs  evm_deploy.rs  predict_address.rs  register_operators.rs  transfer_ownership.rs  wait_verifier_set.rs
src/steps/cosmos_tx/: defaults.rs  instantiate.rs  mod.rs  register_deployment.rs  register_its.rs  reward_pools.rs
src/sui/: config.rs  gmp.rs  its.rs  mod.rs  rpc.rs  tx.rs  wallet.rs
src/xrpl/: helpers.rs  its.rs  mod.rs  rpc.rs  wallet.rs
