[package]
name = "axe"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.6.3", features = ["provider-http", "signer-local", "network", "rpc-types", "contract", "dyn-abi", "json-abi"] }
base64 = "0.22"
clap = { version = "4.5.58", features = ["derive", "env"] }
futures = "0.3"
dirs = "6"
dotenvy = "0.15"
eyre = "0.6"
bip32 = { version = "0.5", features = ["bip39"] }
cosmrs = { version = "0.22", features = ["cosmwasm", "bip32"] }
cosmos-sdk-proto = { version = "0.27", features = ["cosmwasm"] }
prost = "0.13"
tendermint-proto = "0.40"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["full"] }
owo-colors = "4"
indicatif = "0.17"
comfy-table = "7"

# Solana dependencies (load test)
solana-sdk = "~3.0"
solana-client = "~3.0"
solana-transaction-status = "~3.0"
solana-commitment-config = "~3.0"
solana-axelar-gateway = { version = "1.0.0", features = ["no-entrypoint"], default-features = false }
solana-axelar-gas-service = { version = "1.0.0", features = ["no-entrypoint"], default-features = false }
solana-axelar-memo = { version = "1.0.0", features = ["no-entrypoint"], default-features = false }
solana-axelar-its = { version = "1.0.0", features = ["no-entrypoint"], default-features = false }
solana-axelar-std = "1.0.0"
anchor-lang = { version = "1.0.0-rc.5", features = ["event-cpi"] }
borsh = "1"
bs58 = "0.5"
hex = "0.4"
rand = "0.8"

[features]
default = ["devnet-amplifier"]
devnet-amplifier = ["solana-axelar-gateway/devnet-amplifier", "solana-axelar-gas-service/devnet-amplifier", "solana-axelar-memo/devnet-amplifier", "solana-axelar-its/devnet-amplifier"]
stagenet = ["solana-axelar-gateway/stagenet", "solana-axelar-gas-service/stagenet", "solana-axelar-memo/stagenet", "solana-axelar-its/stagenet"]
testnet = ["solana-axelar-gateway/testnet", "solana-axelar-gas-service/testnet", "solana-axelar-memo/testnet", "solana-axelar-its/testnet"]
mainnet = ["solana-axelar-gateway/mainnet", "solana-axelar-gas-service/mainnet", "solana-axelar-memo/mainnet", "solana-axelar-its/mainnet"]
