[package]
name = "axe"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.6.3", features = ["provider-http", "signer-local", "network", "rpc-types", "contract", "dyn-abi", "json-abi"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "alloc"] }
clap = { version = "4.5.58", features = ["derive", "env"] }
futures = "0.3"
dirs = "6"
dotenvy = "0.15"
eyre = "0.6"
bip32 = { version = "0.5", features = ["bip39"] }
cosmrs = { version = "0.22", features = ["cosmwasm", "bip32"] }
cosmos-sdk-proto = { version = "0.27", features = ["cosmwasm"] }
prost = "0.13"
tendermint-proto = "0.40"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
owo-colors = "4"
indicatif = "0.17"
comfy-table = "7"

# Solana dependencies (load test)
solana-sdk = "~3.0"
solana-client = "~3.0"
solana-transaction-status = "~3.0"
solana-commitment-config = "~3.0"
solana-axelar-gateway = { version = "1.0.0", features = ["no-entrypoint"], default-features = false }
solana-axelar-gas-service = { version = "1.0.0", features = ["no-entrypoint"], default-features = false }
solana-axelar-memo = { version = "1.0.0", features = ["no-entrypoint"], default-features = false }
solana-axelar-its = { version = "1.0.0", features = ["no-entrypoint"], default-features = false }
solana-axelar-std = "1.0.0"
anchor-lang = { version = "1.0.0-rc.5", features = ["event-cpi"] }
borsh = "1"
bs58 = "0.5"
hex = "0.4"
rand = "0.8"

# XRPL dependencies (load test)
libsecp256k1 = "0.7"
sha2 = "0.10"
ripemd = "0.1"
xrpl_types = { git = "https://github.com/commonprefix/xrpl-sdk-rust", branch = "main", package = "xrpl_types" }
xrpl_binary_codec = { git = "https://github.com/commonprefix/xrpl-sdk-rust", branch = "main", package = "xrpl_binary_codec" }
xrpl_api = { git = "https://github.com/commonprefix/xrpl-sdk-rust", branch = "main", package = "xrpl_api" }
xrpl_http_client = { git = "https://github.com/commonprefix/xrpl-sdk-rust", branch = "main", package = "xrpl_http_client" }

# Stellar / Soroban dependencies (load test)
stellar-rpc-client = "23.0.0-rc.5"
stellar-xdr = { version = "23.0", features = ["curr", "std", "serde", "base64"] }
stellar-strkey = "0.0.13"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }

# Sui dependencies (load test).
# We use Mysten's `sui-sdk-types` for canonical type defs (TransactionData,
# ObjectRef, Address, etc.); JSON-RPC is hand-rolled in `src/sui.rs` to keep
# the Sui blast radius minimal (no async-runtime or transport-layer deps
# pulled in beyond what we already use). Auto-fallback handles flaky public
# Sui endpoints.
sui-sdk-types = { version = "0.3", features = ["serde", "hash"] }
bech32 = "0.11"
bcs = "0.1"
blake2 = "0.10"

[features]
default = ["devnet-amplifier"]
devnet-amplifier = ["solana-axelar-gateway/devnet-amplifier", "solana-axelar-gas-service/devnet-amplifier", "solana-axelar-memo/devnet-amplifier", "solana-axelar-its/devnet-amplifier"]
stagenet = ["solana-axelar-gateway/stagenet", "solana-axelar-gas-service/stagenet", "solana-axelar-memo/stagenet", "solana-axelar-its/stagenet"]
testnet = ["solana-axelar-gateway/testnet", "solana-axelar-gas-service/testnet", "solana-axelar-memo/testnet", "solana-axelar-its/testnet"]
mainnet = ["solana-axelar-gateway/mainnet", "solana-axelar-gas-service/mainnet", "solana-axelar-memo/mainnet", "solana-axelar-its/mainnet"]

[lints.clippy]
# Catch new functions whose cognitive complexity grows past clippy's default
# threshold (25). The pre-commit hook runs clippy with `-D warnings` so this
# denies any regression.
cognitive_complexity = "deny"

# The polish refactor plan landed in Phase 6: the warn-level scaffolding
# below has been cleaned up across the tree, so each lint is now `deny`
# and the corresponding `-A` flag has been dropped from the pre-commit /
# pre-push hooks. New regressions block the gate.
too_many_arguments     = "deny"
needless_pass_by_value = "deny"
manual_let_else        = "deny"
redundant_clone        = "deny"
useless_conversion     = "deny"

# `too_many_lines` stays at warn: the load-test pipeline orchestrators
# (`poll_pipeline`, `poll_pipeline_its_hub`, `poll_pipeline_its_hub_evm`,
# and the burst/sustained helpers) are state machines whose body length
# matches the inherent state count. Decomposing them further would create
# artificial seams. The warning still surfaces in `cargo clippy` so future
# contributors see it, but it's not gate-enforced.
too_many_lines         = "warn"
